added styling to nav bar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>
+    <header id="head">
+        <h1 id="logo">
             <a href="index.html">Theories of Human Evolution</a>
         </h1>
         <nav>
@@ -20,13 +20,13 @@
                     <a href="#">Stoned Ape</a>
                 </li>
                 <li>
-                    <a href="#">Stoned Ape</a>
+                    <a href="#">The Spear</a>
                 </li>
                 <li>
-                    <a href="#">Stoned Ape</a>
+                    <a href="#">Running Man</a>
                 </li>
                 <li>
-                    <a href="#">Stoned Ape</a>
+                    <a href="#">Home</a>
                 </li>
             </ul>
         </nav>
