--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 id="logo">
             <a href="index.html">Theories of Human Evolution</a>
         </h1>
-        <nav>
+        <nav id="navigation">
             <ul>
                 <li>
                     <a href="#">Stoned Ape</a>
