added more nav styling and created skeleton for overview section

--- a/index.html
+++ b/index.html
@@ -16,20 +16,46 @@
         </h1>
         <nav id="navigation">
             <ul>
-                <li>
-                    <a href="#">Stoned Ape</a>
+                <li class="nav">
+                    <a href="#">
+                        <h2>
+                            <strong>The Stoned Ape</strong>
+                        </h2>
+                    </a>
                 </li>
-                <li>
-                    <a href="#">The Spear</a>
+                <li class="nav">
+                    <a href="#">
+                        <h2>
+                            <strong>The Inner Ear</strong>
+                        </h2>
+                    </a>
                 </li>
-                <li>
-                    <a href="#">Running Man</a>
+                <li class="nav">
+                    <a href="#">
+                        <h2>
+                            <strong>Running Man</strong>
+                        </h2>
+                    </a>
                 </li>
-                <li>
-                    <a href="#">Home</a>
+                <li class="nav">
+                    <a href="index.html">
+                        <h2>
+                            <strong>Overview</strong>
+                        </h2>
+                    </a>
                 </li>
             </ul>
         </nav>
+        <section>
+            <div>
+                <h2>
+                    Overview
+                </h2>
+                <p>
+                    overview of human evolution
+                </p>
+            </div>
+        </section>
     </header>
 </body>
 </html>
