added more styling to nav bar and overview plus added image to overview

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header id="head">
+    <header id="menu">
         <h1 id="logo">
             <a href="index.html">Theories of Human Evolution</a>
         </h1>
@@ -38,24 +38,28 @@
                     </a>
                 </li>
                 <li class="nav">
-                    <a href="index.html">
+                    <a href="#">
                         <h2>
-                            <strong>Overview</strong>
+                            <strong>Home</strong>
                         </h2>
                     </a>
                 </li>
             </ul>
         </nav>
-        <section>
-            <div>
-                <h2>
-                    Overview
-                </h2>
-                <p>
-                    overview of human evolution
-                </p>
-            </div>
-        </section>
     </header>
+    <section class="content">
+        <h2>
+            Overview
+        </h2>
+        <p>
+            The human species has evolved to become the most dominant species
+            on the planet, and populates almost 100% of the globe as well as
+            being the top of the food chain in all ecosystems. However, we are
+            not the strongest or the fastest, so how is it that we have become 
+            such a dominant force on the planet earth? even more so than the dinosaurs
+            of old and the sharks that rule the sea after our relatively short existance
+            <br>
+        </p>
+    </section>
 </body>
 </html>
