added image styling and used code sourced from W3schools to fix bug with image fitting in content section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <h2>
             Overview
         </h2>
+        <br>
+        <img id="civilisation" src="assets/images/civilisation.jpeg" alt="photo of a busy city street with people walking over a crossing">
         <p>
             The human species has evolved to become the most dominant species
             on the planet, and populates almost 100% of the globe as well as
