added new font to paragraph elements and added styling to socials

--- a/index.html
+++ b/index.html
@@ -37,16 +37,33 @@
                         </h2>
                     </a>
                 </li>
-                <li class="nav">
-                    <a href="#">
-                        <h2>
-                            <strong>Home</strong>
-                        </h2>
-                    </a>
-                </li>
             </ul>
         </nav>
     </header>
+    <section id="socials">
+        <h3>
+            Get In Contact!
+        </h3>
+        <br>
+        <p>
+            Contact us using the links below
+        </p>
+        <br>
+        <ul id="social icons">
+            <li>
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.reddit.com" target="_blank"><i class="fa-brands fa-reddit"></i></a>
+            </li>
+        </ul>
+    </section>
     <section class="content">
         <h2>
             Overview
@@ -63,5 +80,7 @@
             <br>
         </p>
     </section>
+<!-- font awesome script -->
+<script src="https://kit.fontawesome.com/1dca78c11c.js" crossorigin="anonymous"></script>
 </body>
 </html>
