final social link styling

--- a/index.html
+++ b/index.html
@@ -41,25 +41,17 @@
         </nav>
     </header>
     <section id="socials">
-        <h3>
-            Get In Contact!
-        </h3>
-        <br>
-        <p>
-            Contact us using the links below
-        </p>
-        <br>
-        <ul id="social icons">
-            <li>
+        <ul>
+            <li class="social-icons">
                 <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </li>
-            <li>
+            <li class="social-icons">
                 <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </li>
-            <li>
+            <li class="social-icons">
                 <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             </li>
-            <li>
+            <li class="social-icons">
                 <a href="https://www.reddit.com" target="_blank"><i class="fa-brands fa-reddit"></i></a>
             </li>
         </ul>
