removed unneccecary css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
             </li>
         </ul>
     </section>
-    <section class="content">
+    <section id="top">
+        <a href="#overview">
+            <h3>
+                To <br> Top
+            </h3>
+            <i class="fa-solid fa-arrow-up"></i>
+        </a>
+    </section>
+    <section class="content" id="overview">
         <h2>
             Overview
         </h2>
