added bug fix to readme.md and added images for  content sections

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav">
                     <a href="#">
                         <h2>
-                            <strong>The Inner Ear</strong>
+                            <strong>Use of Tools</strong>
                         </h2>
                     </a>
                 </li>
@@ -41,17 +41,23 @@
         </nav>
     </header>
     <section id="socials">
+        <h3>
+            Find
+            <br>
+            Us:
+        </h3>
+        <br>
         <ul>
-            <li class="social-icons">
+            <li class="social-icons" id="insta">
                 <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </li>
-            <li class="social-icons">
+            <li class="social-icons" id="fbook">
                 <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </li>
-            <li class="social-icons">
+            <li class="social-icons" id="twitter">
                 <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
             </li>
-            <li class="social-icons">
+            <li class="social-icons" id="reddit">
                 <a href="https://www.reddit.com" target="_blank"><i class="fa-brands fa-reddit"></i></a>
             </li>
         </ul>
@@ -77,7 +83,27 @@
             not the strongest or the fastest, so how is it that we have become 
             such a dominant force on the planet earth? even more so than the dinosaurs
             of old and the sharks that rule the sea after our relatively short existance
-            <br>
+            <br><br>
+            We humans have one aspect that sets us apart from almost all animals on the planet,
+            and that is our brain. The human brain is able to solve complex problems and 
+            adapt to almost every situation it encounters, however it does have its drawbacks. 
+            A large brain like ours requires vast amounts of energy to function, grow and learn.
+            <br><br>
+            This page will be underlining some of the theories proposed as to why we, as a 
+            species have been able to develop our great levels of intelligence and begin to 
+            conquer the world since our species first began to evolve around 2 million years ago.
+            <br> 
+        </p>
+    </section>
+    <section class="content" id="stoned-ape">
+        <h2>
+            The Stoned Ape
+        </h2>
+        <br>
+        <img src="assets/images/amanita.jpeg" id="mushroom"
+        alt="red with white spotted fly agaric mushroom containing psychoactive chemicals">
+        <p>
+
         </p>
     </section>
 <!-- font awesome script -->
