added image file pathways to html sections and added styling to images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav">
                     <a href="#">
                         <h2>
-                            <strong>Use of Tools</strong>
+                            <strong>The Use of Tools</strong>
                         </h2>
                     </a>
                 </li>
@@ -102,6 +102,28 @@
         <br>
         <img src="assets/images/amanita.jpeg" id="mushroom"
         alt="red with white spotted fly agaric mushroom containing psychoactive chemicals">
+        <p>
+
+        </p>
+    </section>
+    <section class="content" id="tools">
+        <h2>
+            The Use of Tools
+        </h2>
+        <br>
+        <img src="assets/images/stone tool.jpeg" id="stone-tool"
+        alt="stone axe resting on a rock">
+        <p>
+
+        </p>
+    </section>
+    <section class="content" id="running">
+        <h2>
+            Running Man
+        </h2>
+        <br>
+        <img src="assets/images/runner.jpeg" id="running-man"
+        alt="female runner running in the mountains">
         <p>
 
         </p>
