added text for stoned ape and use of tools. added color to social icons

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         <nav id="navigation">
             <ul>
                 <li class="nav">
-                    <a href="#">
+                    <a href="#running-man">
                         <h2>
-                            <strong>The Stoned Ape</strong>
+                            <strong>Running Man</strong>
                         </h2>
                     </a>
                 </li>
                 <li class="nav">
-                    <a href="#">
+                    <a href="#tools">
                         <h2>
                             <strong>The Use of Tools</strong>
                         </h2>
                     </a>
                 </li>
                 <li class="nav">
-                    <a href="#">
+                    <a href="#stoned-ape">
                         <h2>
-                            <strong>Running Man</strong>
+                            <strong>The Stoned Ape</strong>
                         </h2>
                     </a>
                 </li>
@@ -63,7 +63,7 @@
         </ul>
     </section>
     <section id="top">
-        <a href="#overview">
+        <a href="#menu">
             <h3>
                 To <br> Top
             </h3>
@@ -103,7 +103,21 @@
         <img src="assets/images/amanita.jpeg" id="mushroom"
         alt="red with white spotted fly agaric mushroom containing psychoactive chemicals">
         <p>
-
+           This theory was brought about by Dennis McKenna. He believed that when early humanids
+           left the trees becoming bipedal, their food choices were expanded as they hunted animals
+           and foraged in places that thay had not looked before. This is where, he proposed, that
+           humanids were first introduced to the psilocybin (the active chemical in causing visual 
+           hallucinations) containing mushrooms
+           <br><br>
+           McKenna suggested that it was these psilocybin mushrooms were the trigger to humans to rapidly develop
+           and organise their information- processing, leading to the tripling in mass of the brain in the
+           2 million years we have existed. Causing the differentiation from our acnestors, Homo Erectus.
+           <br><br>
+           these 'magic mushrooms' were not only thought to be the starting point in the evolution of the 
+           modern day human, but the cause behind the cuntinual development of the human intelligence up 
+           untill modern day. psilocybin mushrooms are most commonly found around animal dung, meaning that when
+           humans began to farm animals for ther produce, these mushrooms were much more readily available and 
+           were eventually encorporated into religeous practices and rituals, leading to the religeons that exist today.
         </p>
     </section>
     <section class="content" id="tools">
@@ -114,7 +128,19 @@
         <img src="assets/images/stone tool.jpeg" id="stone-tool"
         alt="stone axe resting on a rock">
         <p>
-
+            While not completely unique to humans, tools have been a core part of our evolution. Our use of early tools
+            such as the hand axes, spears, cutting tools, and arrows have propelled us in the evolutionary race. Due to
+            the evolution of the opposing thumb in apes, humans and other apes are able to have a much greater dexterity and 
+            control wnen it comes to precise movements and actions with our hands. This ability and the relatively high intelligence
+            possesed by early humans allowed us to create tools from the environment around us, form flints, wood and bone.
+            these tools allowed early humans to have a huge amount of success when it came to hunting and accesing food,
+            as we were able to make up for any lacking in offensive power with piercing weapons and blunt force. 
+            <br><br>
+            This constructive weaponry would allow us as humans to provide energy for our rapidly developing and growing brains
+            leading to ever greater advancements in technology, such as the bow and arrow for example. it was tools like these
+            that allowed humans to hunt and gather in safety, being able to take down dnagerous prey at a range and deending
+            against attackers. this overall would lead to a massive increace in the population of the early huamn, boosting them 
+            to the top of almost every food chain.   
         </p>
     </section>
     <section class="content" id="running">
