added text for running man

--- a/index.html
+++ b/index.html
@@ -151,7 +151,19 @@
         <img src="assets/images/runner.jpeg" id="running-man"
         alt="female runner running in the mountains">
         <p>
-
+            We humans are no means the quickest, strongest or most agile of creatures, in fact we are probably out done by most
+            animals that we would encounter in at least one of these aspects and usually more. So why is it that we were able, 
+            despite our weak physical appearence, able to hunt and kill animals many times our size?
+            <br><br>
+            The reason behind this is that we are designed purely for endurance. Being bipedal meant that we were able to travel 
+            large distances without stopping or slowing down. Due to our upright nature, we are able to supply constant oxygen to 
+            our vital organs and muscles without it being impeded when we are running. Quadrupeds however, when running, their
+            are forced aginst their ribcage, reducing oxygen capcity and preventing them from being able to cool down. 
+            Taking this factor into account, our ancestors were able to apply a relentless advance towards the animal,
+            preventing it from stopping to pant and unable to cool down, eventually leading to its capture.
+            <br><br>
+            It was with this technique that we were able to combat the ice age beasts such as the bison, wooly mammoth, and the wooly 
+            rhino. With this ability, we were able to provide the energy required for our intelligence to develop.
         </p>
     </section>
 <!-- font awesome script -->
