added styling for screen size 1100px and 850px upwards

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             Overview
         </h2>
         <br>
-        <img id="civilisation" src="assets/images/civilisation.jpeg" alt="photo of a busy city street with people walking over a crossing">
+        <img id="civilisation" src="assets/images/civilisation.jpeg" class="img"
+         alt="photo of a busy city street with people walking over a crossing">
         <p>
             The human species has evolved to become the most dominant species
             on the planet, and populates almost 100% of the globe as well as
@@ -100,7 +101,7 @@
             The Stoned Ape
         </h2>
         <br>
-        <img src="assets/images/amanita.jpeg" id="mushroom"
+        <img src="assets/images/amanita.jpeg" id="mushroom" class="img"
         alt="red with white spotted fly agaric mushroom containing psychoactive chemicals">
         <p>
            This theory was brought about by Dennis McKenna. He believed that when early humanids
@@ -126,7 +127,7 @@
         </h2>
         <br>
         <img src="assets/images/stone tool.jpeg" id="stone-tool"
-        alt="stone axe resting on a rock">
+        class="img" alt="stone axe resting on a rock">
         <p>
             While not completely unique to humans, tools have been a core part of our evolution. Our use of early tools
             such as the hand axes, spears, cutting tools, and arrows have propelled us in the evolutionary race. Due to
@@ -149,7 +150,7 @@
         </h2>
         <br>
         <img src="assets/images/runner.jpeg" id="running-man"
-        alt="female runner running in the mountains">
+        class="img" alt="female runner running in the mountains">
         <p>
             We humans are no means the quickest, strongest or most agile of creatures, in fact we are probably out done by most
             animals that we would encounter in at least one of these aspects and usually more. So why is it that we were able, 
