--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             Overview
         </h2>
         <br>
-        <img id="civilisation" src="assets/images/civilisation.jpeg" class="img"
-         alt="photo of a busy city street with people walking over a crossing">
+        <img id="civilisation" src="assets/images/civilisation.jpeg" class="img" alt="photo of a busy city street with people walking over a crossing">
         <p>
             The human species has evolved to become the most dominant species
             on the planet, and populates almost 100% of the globe as well as
@@ -101,8 +100,7 @@
             The Stoned Ape
         </h2>
         <br>
-        <img src="assets/images/amanita.jpeg" id="mushroom" class="img"
-        alt="red with white spotted fly agaric mushroom containing psychoactive chemicals">
+        <img src="assets/images/amanita.jpeg" id="mushroom" class="img" alt="red with white spotted fly agaric mushroom containing psychoactive chemicals">
         <p>
            This theory was brought about by Dennis McKenna. He believed that when early humanids
            left the trees becoming bipedal, their food choices were expanded as they hunted animals
@@ -126,8 +124,7 @@
             The Use of Tools
         </h2>
         <br>
-        <img src="assets/images/stone tool.jpeg" id="stone-tool"
-        class="img" alt="stone axe resting on a rock">
+        <img src="assets/images/stone tool.jpeg" id="stone-tool" class="img" alt="stone axe resting on a rock">
         <p>
             While not completely unique to humans, tools have been a core part of our evolution. Our use of early tools
             such as the hand axes, spears, cutting tools, and arrows have propelled us in the evolutionary race. Due to
@@ -149,8 +146,7 @@
             Running Man
         </h2>
         <br>
-        <img src="assets/images/runner.jpeg" id="running-man"
-        class="img" alt="female runner running in the mountains">
+        <img src="assets/images/runner.jpeg" id="running-man" class="img" alt="female runner running in the mountains">
         <p>
             We humans are no means the quickest, strongest or most agile of creatures, in fact we are probably out done by most
             animals that we would encounter in at least one of these aspects and usually more. So why is it that we were able, 
