removed illegal character in filepath

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             The Use of Tools
         </h2>
         <br>
-        <img src="assets/images/stone tool.jpeg" id="stone-tool" class="img" alt="stone axe resting on a rock">
+        <img src="assets/images/stone-tool.jpeg" id="stone-tool" class="img" alt="stone axe resting on a rock">
         <p>
             While not completely unique to humans, tools have been a core part of our evolution. Our use of early tools
             such as the hand axes, spears, cutting tools, and arrows have propelled us in the evolutionary race. Due to
